--- a/cssdemo.html
+++ b/cssdemo.html
@@ -3,6 +3,18 @@
     <title>
       My Home Page
     </title>
+
+    <link rel="stylesheet" type="text/css" href="style.css"
+
+    <!--internal style sheet sample
+    <style>
+        h1{
+            font-size: 24;
+            font-family: Verdana, Geneva, Tahoma, sans-serif
+        }
+    </style>
+    -->
+
   </head>
   
   <body>
@@ -18,6 +30,12 @@
         <li><a href="cssdemo.html">CSS Demo</a></li>
       </ul>
     </nav>
-    <p>Welcome to my website!</p>
+    <h1 class="blue">MAKE ME BLUE</h1>
+    <h1 id="purple">MAKE ME PURPLE</h1>
+    <h1 class="red">MAKE ME RED</h1>
+    <h1 cless="alignLeft">LEFT</h1>
+    <h1 class="alignCenter">CENTER</h1>
+    <h1 class="alignRight">RIGHT</h1>
+    <h1 class="alignCenter white blackbackground">WHITE TEXT on BLACK BACKGROUND</h1>
   </body>
 </html>
