--- a/unorderedlists.html
+++ b/unorderedlists.html
@@ -6,6 +6,18 @@
   </head>
   
   <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="headings.html">Heading Demo</a></li>
+        <li><a href="textdemo.html">Text Demo</a></li>
+        <li><a href="unorderedlists.html">Unordered List Demo</a></li>
+        <li><a href="orderedlists.html">Ordered List Demo</a></li>
+        <li><a href="tableDemo1.html">Table Demo 1</a></li>
+        <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
+        <li><a href="cssdemo.html">CSS Demo</a></li>
+      </ul>
+    </nav>
     <h1>This is a demo of a Bulleted List</h1>
     <ul>
         <li>Item</li>
