update with video

--- a/travel.html
+++ b/travel.html
@@ -3,8 +3,17 @@
     <title>
       Dream Vacation Page
     </title>
+    <!--Internal CSS
+    <style>
+        body{
+            background-color: rgb(71, 166, 221);
+            background-size: 100% 100%;
+        }
+    </style>
+    -->
+    <link rel="stylesheet", type="text/css" href="travelStyle.css">
   </head>
-  
+
   <body>
     <nav>
       <ul>
@@ -16,9 +25,52 @@
         <li><a href="tableDemo1.html">Table Demo 1</a></li>
         <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
         <li><a href="cssdemo.html">CSS Demo</a></li>
-        <li><a href="travel.html">dream Vacation Page</a></li>
+        <li><a href="travel.html">Dream Vacation Page</a></li>
       </ul>
     </nav>
-    <p>Welcome to my website!</p>
+
+    <center>
+        <a href="media/scotland.jpg">
+            <img src="media/scotland.jpg" title="Edinburgh" alt="Image of Edinburgh"
+            width="600" height="auto">
+        </a>
+        <a href="media/scotland2.jpg">
+            <img src="media/scotland2.jpg" title="Somewhere in Scotland" alt="Image of Scotland"
+            width="600" height="auto">
+        </a>
+        <a href="media/scotland3.jpg">
+            <img src="media/scotland3.jpg" title="Random Castle" alt="Random Castle"
+            width="600" height="auto">
+        </a>
+        <a href="media/scotland4.jpg">
+            <img src="media/scotland4.jpg" title="Steam Engine Train" alt="Steam Engine Train"
+            width="600" height="auto">
+        </a>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/stGfw_T821g" 
+        title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen></iframe>
+        <br>
+        <a href="media/scotland4.jpg">
+            <img src="media/scotland4.jpg" title="Steam Engine Train" alt="Steam Engine Train"
+            width="600" height="auto">
+        </a>
+        <a href="media/scotland3.jpg">
+            <img src="media/scotland3.jpg" title="Random Castle" alt="Random Castle"
+            width="600" height="auto">
+        </a>
+        <a href="media/scotland2.jpg">
+            <img src="media/scotland2.jpg" title="Somewhere in Scotland" alt="Image of Scotland"
+            width="600" height="auto">
+        </a>
+        <a href="media/scotland.jpg">
+            <img src="media/scotland.jpg" title="Edinburgh" alt="Image of Edinburgh"
+            width="600" height="auto">
+        </a>
+    </center>
+
+
+
   </body>
 </html>
