--- a/travel.html
+++ b/travel.html
@@ -32,41 +32,41 @@
     <center>
         <a href="media/scotland.jpg">
             <img src="media/scotland.jpg" title="Edinburgh" alt="Image of Edinburgh"
-            width="600" height="auto">
+            width="300" height="200">
         </a>
         <a href="media/scotland2.jpg">
             <img src="media/scotland2.jpg" title="Somewhere in Scotland" alt="Image of Scotland"
-            width="600" height="auto">
+            width="300" height="200">
         </a>
         <a href="media/scotland3.jpg">
             <img src="media/scotland3.jpg" title="Random Castle" alt="Random Castle"
-            width="600" height="auto">
+            width="300" height="200">
         </a>
         <a href="media/scotland4.jpg">
             <img src="media/scotland4.jpg" title="Steam Engine Train" alt="Steam Engine Train"
-            width="600" height="auto">
+            width="300" height="200">
         </a>
         <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/stGfw_T821g" 
+        <iframe width="1200" height="200" src="https://www.youtube.com/embed/stGfw_T821g" 
         title="YouTube video player" 
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        frameborder="0" allow="accelerometer; 200play; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen></iframe>
         <br>
         <a href="media/scotland4.jpg">
             <img src="media/scotland4.jpg" title="Steam Engine Train" alt="Steam Engine Train"
-            width="600" height="auto">
+            width="300" height="200">
         </a>
         <a href="media/scotland3.jpg">
             <img src="media/scotland3.jpg" title="Random Castle" alt="Random Castle"
-            width="600" height="auto">
+            width="300" height="200">
         </a>
         <a href="media/scotland2.jpg">
             <img src="media/scotland2.jpg" title="Somewhere in Scotland" alt="Image of Scotland"
-            width="600" height="auto">
+            width="300" height="200">
         </a>
         <a href="media/scotland.jpg">
             <img src="media/scotland.jpg" title="Edinburgh" alt="Image of Edinburgh"
-            width="600" height="auto">
+            width="300" height="200">
         </a>
     </center>
 
