--- a/travel.html
+++ b/travel.html
@@ -30,6 +30,9 @@
     </nav>
 
     <center>
+        <h2>My dream vacation spot, Scotland</h2>
+        <h3>Click each image to view the full-size verision</h3>
+        <h3>Click the video to see the top 10 places to visit in Scotlandn</h3>
         <a href="media/scotland.jpg">
             <img src="media/scotland.jpg" title="Edinburgh" alt="Image of Edinburgh"
             width="300" height="200">
@@ -47,7 +50,7 @@
             width="300" height="200">
         </a>
         <br>
-        <iframe width="1200" height="200" src="https://www.youtube.com/embed/stGfw_T821g" 
+        <iframe width="1200" height="400" src="https://www.youtube.com/embed/stGfw_T821g" 
         title="YouTube video player" 
         frameborder="0" allow="accelerometer; 200play; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
         allowfullscreen></iframe>
