--- a/travel.html
+++ b/travel.html
@@ -32,7 +32,7 @@
     <center>
         <h2>My dream vacation spot, Scotland</h2>
         <h3>Click each image to view the full-size verision</h3>
-        <h3>Click the video to see the top 10 places to visit in Scotlandn</h3>
+        <h3>Click the video to see the top 10 places to visit in Scotland</h3>
         <a href="media/scotland.jpg">
             <img src="media/scotland.jpg" title="Edinburgh" alt="Image of Edinburgh"
             width="300" height="200">
