--- a/cssdemo.html
+++ b/cssdemo.html
@@ -4,7 +4,7 @@
       My Home Page
     </title>
 
-    <link rel="stylesheet" type="text/css" href="style.css"
+    <link rel="stylesheet" type="text/css" href="style.css">
 
     <!--internal style sheet sample
     <style>
@@ -28,6 +28,7 @@
         <li><a href="tableDemo1.html">Table Demo 1</a></li>
         <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
         <li><a href="cssdemo.html">CSS Demo</a></li>
+        <li><a href="travel.html">Dream Vacation Page</a></li>
       </ul>
     </nav>
     <h1 class="blue">MAKE ME BLUE</h1>
