--- a/index.html
+++ b/index.html
@@ -6,19 +6,38 @@
   </head>
   
   <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="headings.html">Heading Demo</a></li>
-        <li><a href="textdemo.html">Text Demo</a></li>
-        <li><a href="unorderedlists.html">Unordered List Demo</a></li>
-        <li><a href="orderedlists.html">Ordered List Demo</a></li>
-        <li><a href="tableDemo1.html">Table Demo 1</a></li>
-        <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
-        <li><a href="cssdemo.html">CSS Demo</a></li>
-        <li><a href="travel.html">Dream Vacation Page</a></li>
-      </ul>
-    </nav>
+    <ul class="nav nav-pills nav-fill">
+      <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+          <a href="headings.html">Heading Demo</a>
+      </li>
+      <li class="nav-item">
+          <a href="textdemo.html">Text Demo</a>
+      </li>
+      <li class="nav-item">
+          <a href="unorderedlist.html">Unordered List Demo</a>
+      </li>
+      <li class="nav-item">
+          <a href="orderedlist.html">Ordered List Demo</a>
+      </li>
+      <li class="nav-item">
+          <a href="tableDemo1.html">Table Demo 1</a>
+      </li>
+      <li class="nav-item">
+          <a href="tableDemo2.html">Table Demo 2 - Pets</a>
+      </li>
+      <li class="nav-item">
+          <a href="cssdemo.html">CSS Demo</a>
+      </li>
+      <li class="nav-item">
+          <a href="travel.html">Dream Vacation Page</a>
+      </li>
+      <li class="nav-item">
+          <a href="bootstrapdemo.html">Bootstrap Demo</a>
+      </li>
+    </ul>
     <p>Welcome to my website!</p>
   </body>
 </html>
