--- a/textdemo.html
+++ b/textdemo.html
@@ -1,25 +1,52 @@
 <html>
-<head>
+  <head>
     <title>
-        Text Demo
+      Text Demo
     </title>
-</head>
-<body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="headings.html">Heading Demo</a></li>
-            <li><a href="textdemo.html">Text Demo</a></li>
-            <li><a href="unorderedlists.html">Unordered List Demo</a></li>
-            <li><a href="orderedlists.html">Ordered List Demo</a></li>
-            <li><a href="tableDemo1.html">Table Demo 1</a></li>
-            <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
-            <li><a href="cssdemo.html">CSS Demo</a></li>
-            <li><a href="travel.html">Dream Vacation Page</a></li>
-        </ul>
-    </nav>
+
+     <!--to use external bootstrap use the following-->
+     <link rel="stylesheet" 
+     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+     crossorigin="anonymous">
+  </head>
+  
+  <body>
+    <ul class="nav nav-pills nav-fill">
+      <li class="nav-item">
+          <a href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+          <a href="headings.html">Heading Demo</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link active" aria-current="page"  href="textdemo.html">Text Demo</a>
+      </li>
+      <li class="nav-item">
+          <a href="unorderedlist.html">Unordered List Demo</a>
+      </li>
+      <li class="nav-item">
+          <a href="orderedlist.html">Ordered List Demo</a>
+      </li>
+      <li class="nav-item">
+          <a href="tableDemo1.html">Table Demo 1</a>
+      </li>
+      <li class="nav-item">
+          <a href="tableDemo2.html">Table Demo 2 - Pets</a>
+      </li>
+      <li class="nav-item">
+          <a href="cssdemo.html">CSS Demo</a>
+      </li>
+      <li class="nav-item">
+          <a href="travel.html">Dream Vacation Page</a>
+      </li>
+      <li class="nav-item">
+          <a href="bootstrapdemo.html">Bootstrap Demo</a>
+      </li>
+    </ul>
+
     <center>
-        <h1>This is a demo of types of text in HTML</h1>
+        <h1>This is a demo of different types of text in HTML</h1>
         <h2>Bolded Text</h2>
         <p>
             <b>This is bold text</b> <br>
@@ -28,26 +55,25 @@
 
         <h2>Italicized Text</h2>
         <p>
-            <i>This text is italicized</i> <br>
-            <em>This text is also italicized</em>
+            <i>This text is Italicized</i> <br>
+            <em>This text is also Italicized</em>
         </p>
 
         <h2>Underlined and Strikethrough Text</h2>
         <p>
-            <u>This text is underlined</u> <br>
-            <del>This is strikethrough text</del> <br>
+            <u>This is underlined text</u> <br>
+            <del>This is strikethrough text using the del tag</del>
         </p>
 
         <h2>Quoted Text</h2>
         <p>
-            <q>This text is quoted</q> <br>
+            <q>This is quoted text</q>
         </p>
 
-        <h2>Super and Subscript Text</h2>
-        <p>
-            Hello<sup>This is superscript text</sup> <br>
-            Hello<sub>This is subscript text</sub>
-        </p>
-    </center>>
-</body>
+    </center>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </body>
 </html>
