--- a/travel.html
+++ b/travel.html
@@ -3,31 +3,62 @@
     <title>
       Dream Vacation Page
     </title>
-    <!--Internal CSS
+
+    <!-- Internal CSS
     <style>
         body{
-            background-color: rgb(71, 166, 221);
+            background-color: aquamarine;
             background-size: 100% 100%;
         }
     </style>
     -->
-    <link rel="stylesheet", type="text/css" href="travelStyle.css">
-  </head>
 
+   
+
+     <!--to use external bootstrap use the following-->
+     <link rel="stylesheet" 
+     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+     crossorigin="anonymous">
+
+      <!--External CSS-->
+    <link rel="stylesheet" type="text/css" href="travelStyle.css">
+
+  </head>
+  
   <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="headings.html">Heading Demo</a></li>
-        <li><a href="textdemo.html">Text Demo</a></li>
-        <li><a href="unorderedlists.html">Unordered List Demo</a></li>
-        <li><a href="orderedlists.html">Ordered List Demo</a></li>
-        <li><a href="tableDemo1.html">Table Demo 1</a></li>
-        <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
-        <li><a href="cssdemo.html">CSS Demo</a></li>
-        <li><a href="travel.html">Dream Vacation Page</a></li>
+    <ul class="nav nav-pills nav-fill">
+        <li class="nav-item">
+            <a href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a href="headings.html">Heading Demo</a>
+        </li>
+        <li class="nav-item">
+            <a href="textdemo.html">Text Demo</a>
+        </li>
+        <li class="nav-item">
+            <a href="unorderedlist.html">Unordered List Demo</a>
+        </li>
+        <li class="nav-item">
+            <a href="orderedlist.html">Ordered List Demo</a>
+        </li>
+        <li class="nav-item">
+            <a href="tableDemo1.html">Table Demo 1</a>
+        </li>
+        <li class="nav-item">
+            <a href="tableDemo2.html">Table Demo 2 - Pets</a>
+        </li>
+        <li class="nav-item">
+            <a href="cssdemo.html">CSS Demo</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="travel.html">Dream Vacation Page</a>
+        </li>
+        <li class="nav-item">
+            <a href="bootstrapdemo.html">Bootstrap Demo</a>
+        </li>
       </ul>
-    </nav>
 
     <center>
         <h2>My dream vacation spot, Scotland</h2>
