--- a/bootstrapdemo.html
+++ b/bootstrapdemo.html
@@ -45,6 +45,9 @@
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="bootstrapdemo.html">Bootstrap Demo</a>
         </li>
+        <li class="nav-item">
+            <a href="mediaQueryDemo.html">Media Query Demo</a>
+        </li>
       </ul>
     
 
