--- a/cssdemo.html
+++ b/cssdemo.html
@@ -54,6 +54,9 @@
       <li class="nav-item">
           <a href="bootstrapdemo.html">Bootstrap Demo</a>
       </li>
+      <li class="nav-item">
+        <a href="mediaQueryDemo.html">Media Query Demo</a>
+    </li>
     </ul>
 
     <h1 class = "blue">MAKE ME BLUE</h1>
