--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       <li class="nav-item">
           <a href="bootstrapdemo.html">Bootstrap Demo</a>
       </li>
+      <li class="nav-item">
+        <a href="mediaQueryDemo.html">Media Query Demo</a>
+    </li>
     </ul>
 
     <p>Welcome to my web site!</p>
