--- a/mediaQueryDemo.html
+++ b/mediaQueryDemo.html
@@ -10,6 +10,8 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
     crossorigin="anonymous">
 
+    <link rel="stylesheet" href="boxstyle.css">
+
   </head>
   
   <body>
@@ -45,11 +47,19 @@
           <a href="bootstrapdemo.html">Bootstrap Demo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="mediaQueryDemo.html">Home</a>
+        <a class="nav-link active" aria-current="page" href="mediaQueryDemo.html">Media Query Demo</a>
     </li>
     </ul>
 
-    <p>Welcome to my web site!</p>
+    <center>
+        <h2>Media Query Demo</h2>
+        <h3>Change the width of the page to see changes in the page</h3>
+    </center>
+
+    <div class="box greenbox"></div>
+
+
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
