--- a/orderedlist.html
+++ b/orderedlist.html
@@ -43,6 +43,9 @@
         <li class="nav-item">
             <a href="bootstrapdemo.html">Bootstrap Demo</a>
         </li>
+        <li class="nav-item">
+            <a href="mediaQueryDemo.html">Media Query Demo</a>
+        </li>
       </ul>
 
     <h1>This is a demo of a Numbered List</h1>
