--- a/travel.html
+++ b/travel.html
@@ -58,6 +58,9 @@
         <li class="nav-item">
             <a href="bootstrapdemo.html">Bootstrap Demo</a>
         </li>
+        <li class="nav-item">
+          <a href="mediaQueryDemo.html">Media Query Demo</a>
+      </li>
       </ul>
 
     <center>
