--- a/mediaQueryDemo.html
+++ b/mediaQueryDemo.html
@@ -11,13 +11,15 @@
     crossorigin="anonymous">
 
     <link rel="stylesheet" href="boxstyle.css">
+    <link rel="stylesheet" href="navstyle.css">
 
   </head>
   
   <body>
-    <ul class="nav nav-pills nav-fill">
+    <!--primary nav (big screen)-->
+    <ul class="nav nav-pills nav-fill primaryNav">
       <li class="nav-item">
-        <a href="index.html">Heading Demo</a>
+        <a href="index.html">Home</a>
       </li>
       <li class="nav-item">
           <a href="headings.html">Heading Demo</a>
@@ -48,8 +50,29 @@
       </li>
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="mediaQueryDemo.html">Media Query Demo</a>
-    </li>
+      </li>
     </ul>
+
+    <!--secondary nav (small screen)-->
+    <div class="dropdown show secondaryNav">
+        <a class="btn btn-info dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Navigation
+        </a>
+      
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="index.html">Home</a>
+          <a class="dropdown-item" href="headings.html">Heading Demo</a>
+          <a class="dropdown-item" href="textdemo.html">Text Demo</a>
+          <a class="dropdown-item" href="unorderedlist.html">Unordered List Demo</a>
+          <a class="dropdown-item" href="orderedlist.html">Ordered List Demo</a>
+          <a class="dropdown-item" href="tableDemo1.html">Table Demo 1</a>
+          <a class="dropdown-item" href="tableDemo2.html">Table Demo 2 - Pets</a>
+          <a class="dropdown-item" href="cssdemo.html">CSS Demo</a>
+          <a class="dropdown-item" href="travel.html">Dream Vacation Page</a>
+          <a class="dropdown-item" href="bootstrapdemo.html">Bootstrap Demo</a>
+          <a class="dropdown-item active" href="mediaQueryDemo.html">Media Query Demo</a>
+        </div>
+      </div>
 
     <center>
         <h2>Media Query Demo</h2>
@@ -57,9 +80,10 @@
     </center>
 
     <div class="box greenbox"></div>
-
-
-
+    <div class="box bluebox"></div>
+    <div class="box redbox"></div>
+    <div class="box yellowbox"></div>
+    <div class="box violetbox"></div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
