--- a/tableDemo1.html
+++ b/tableDemo1.html
@@ -9,10 +9,13 @@
      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
      crossorigin="anonymous">
+
+     <link rel="stylesheet" href="navstyle.css">
+     
   </head>
   
   <body>
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills nav-fill primaryNav">
       <li class="nav-item">
           <a href="index.html">Home</a>
       </li>
@@ -47,6 +50,26 @@
         <a href="mediaQueryDemo.html">Media Query Demo</a>
     </li>
     </ul>
+
+    <div class="dropdown show secondaryNav">
+        <a class="btn btn-info dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Navigation
+        </a>
+      
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="index.html">Home</a>
+          <a class="dropdown-item" href="headings.html">Heading Demo</a>
+          <a class="dropdown-item" href="textdemo.html">Text Demo</a>
+          <a class="dropdown-item" href="unorderedlist.html">Unordered List Demo</a>
+          <a class="dropdown-item" href="orderedlist.html">Ordered List Demo</a>
+          <a class="dropdown-item active" href="tableDemo1.html">Table Demo 1</a>
+          <a class="dropdown-item" href="tableDemo2.html">Table Demo 2 - Pets</a>
+          <a class="dropdown-item" href="cssdemo.html">CSS Demo</a>
+          <a class="dropdown-item" href="travel.html">Dream Vacation Page</a>
+          <a class="dropdown-item" href="bootstrapdemo.html">Bootstrap Demo</a>
+          <a class="dropdown-item" href="mediaQueryDemo.html">Media Query Demo</a>
+        </div>
+      </div>
 
     <center>
         <h1>Table Demo</h1>
